fixes for images on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -120,5 +120,14 @@ p {
   html {
     margin: 0px 25px;
   }
+  header:hover::after {
+    transform: scale(1);
+  }
+  .link:hover {
+    padding-top:8px;
+    padding-bottom:8px;
+    padding-left:22px;
+    padding-right:22px;
+  }
   
 }
