--- a/styles/page.css
+++ b/styles/page.css
@@ -70,3 +70,12 @@
 .underline {
   text-decoration: underline;
 }
+
+@media screen and (max-width: 760px) {
+  .proj-page img, .proj-page figure {
+    width:100%;
+    min-width: 0px;
+    margin: 2rem auto;
+    border-radius:8px;
+  }
+}
